# tessera

./: .gitignore
doc/: 143-R14-to-tessera.md  143-R15-to-tessera.md  143-R16-to-tessera.md  143-R17-to-tessera.md  143-R18-to-tessera.md  143-R19-to-tessera.md  143-R20-to-tessera.md  143-R21-handoff-to-tessera.md  RESULTS.md  clustering-rationale.md  collaboration-convention.md  deferred-maintenance-catalogue.md  failure-modes-pgcl.md  failure-modes-telix.md  failure-modes.md  formalization-status.md  from-pgcl-143-cbmc.md  intra-kau-tiling.md  mmu-variants.md  proof-obligations.md  property2-kickoff.md  tessera-verification-kickoff.md  to-pgcl-143-R13-callbalance.md  to-pgcl-143-R14-reply.md  to-pgcl-143-R14-reproducer-skeleton.md  to-pgcl-143-R14C-gate-certified.md  to-pgcl-143-R17-mechanism.md  to-pgcl-143-R18-split.md  to-pgcl-143-R19-preboot.md  to-pgcl-143-R20-instrument.md  to-pgcl-143-add-edge-warn-patch.md  to-pgcl-143-anonexcl-flag.md  to-pgcl-143-contractA-fix.md  to-pgcl-143-convergence.md  to-pgcl-143-deficit-probe-patch.md  to-pgcl-143-direction.md  to-pgcl-143-model-gaps.md  to-pgcl-143-perclus-draft.md  to-pgcl-143-perfrag-swap.md  to-pgcl-143-reclaim-staletlb.md  (+8 more)
doc/from-pgcl/: 143-cbmc-bridge.md  143-empirical.md  143-reply.md  143-reply3-reframe.md
proof/: README.md  Tessera.lean  lake-manifest.json  lakefile.toml
proof/Tessera/: BTree.lean  Basic.lean  CallBalance.lean  CollapsePin.lean  Compositionality.lean  (+53 more)
property2/: README.md  arch-coverage.md
rust/: README.md
rust/pvmw-batch-kani/: Cargo.toml
rust/pvmw-batch-kani/src/: lib.rs
(+20 files in other folders)
